Fix vercel.json schema - remove invalid root property

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "buildCommand": "cd website && npm run build",
-  "outputDirectory": "website/.next",
-  "framework": "nextjs",
-  "root": "website"
+  "framework": "nextjs"
 }
