Fix Vercel configuration for website deployment
- Add vercel.json to website folder
- Update root vercel.json to specify website as root directory
- Configure build settings for proper deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-  "framework": "nextjs"
+  "framework": null,
+  "buildCommand": "cd website && npm install && npm run build",
+  "outputDirectory": "website/.next",
+  "installCommand": "cd website && npm install",
+  "rootDirectory": "website"
 }
