Simplify Vercel config - root directory already set in dashboard
- Remove redundant build commands (Vercel auto-detects Next.js)
- Keep minimal config since Root Directory is set to 'website' in dashboard

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "framework": null,
-  "buildCommand": "cd website && npm install && npm run build",
-  "outputDirectory": "website/.next",
-  "installCommand": "cd website && npm install",
-  "rootDirectory": "website"
+  "framework": "nextjs"
 }
