--- a/turph-app/package.json
+++ b/turph-app/package.json
@@ -16,9 +16,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "ical": "^0.8.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
+    "playwright": "^1.58.1",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
