Fix Prisma 7 client with PlanetScale adapter
- Install @prisma/adapter-planetscale and @planetscale/database
- Configure PrismaClient to use PlanetScale adapter
- Required for Prisma 7 which needs explicit adapter for database connections
- All API endpoints now working correctly with PlanetScale

--- a/turph-app/package.json
+++ b/turph-app/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@planetscale/database": "^1.19.0",
+    "@prisma/adapter-planetscale": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
