--- a/turph-app/package.json
+++ b/turph-app/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "ical": "^0.8.0",
     "lucide-react": "^0.563.0",
