--- a/turph-app/package.json
+++ b/turph-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@planetscale/database": "^1.19.0",
     "@prisma/adapter-planetscale": "^7.3.0",
     "@prisma/client": "^7.3.0",
@@ -28,8 +29,10 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^3.0.6",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
