Add conversational AI interface with Anthropic
Core Features:
- Anthropic Claude integration with tool calling
- 10 AI tools for database operations:
  * create_person, create_company, create_event, create_interaction
  * search_people, search_companies, search_events
  * get_person_interactions, update_person, delete_person
- Natural language processing for all CRUD operations
- Context-aware conversations with message history
- Auto-find or create companies when adding people
- Fuzzy name matching for searches and updates

Chat API:
- /api/chat endpoint handles conversations
- Tool use loop for multi-step operations
- Comprehensive system prompt for Boston networking context
- Error handling and graceful failures

UI Updates:
- Chat-style message interface
- User and assistant message bubbles
- Loading states with spinner
- Auto-scroll to latest message
- Enter to send, Shift+Enter for newline
- Bot and user avatars

Examples of natural language commands:
- "Add Mike Chen as CTO at TechVentures"
- "Log a meeting with Sarah yesterday about ML ops"
- "Show me upcoming events in Cambridge"
- "Who works at TechVentures?"
- "Delete John Smith"

Conversational interface is now the primary way to manage networking data!

--- a/turph-app/package.json
+++ b/turph-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.72.1",
     "@hookform/resolvers": "^5.2.2",
     "@planetscale/database": "^1.19.0",
     "@prisma/adapter-planetscale": "^7.3.0",
